Changed the logic on how the modals actually open up. Now they're not rendered even as hidden, if they're not visible. Eventcards are now drawn in two columns on bigger screens. Optimized resource loading. Removed the facebook developer notice. Fixed login with email addresses.

--- a/src/mystyles.scss
+++ b/src/mystyles.scss
@@ -53,6 +53,10 @@ a.adminactive {
   animation-duration: 500ms;
 }
 
+.eventheader {
+  height: 5em;
+}
+
 .languageflag {
   height: 1em;
   padding-right: 1em;
